<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".admin.MenuAdminActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/logout"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/Logout"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/logout" />

        <ImageView
            android:layout_width="350dp"
            android:layout_height="150dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/Logo"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Hi"
            android:textSize="50sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            android:layout_gravity="start"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/IntroAdmin"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <Button
            android:id="@+id/repair"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Repair"
            android:layout_marginTop="40dp"
            style="@style/BlueButton"
            android:height="50dp" />

        <Button
            android:id="@+id/department"
            style="@style/WhiteButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Departement"
            android:layout_marginTop="10dp"
            android:height="50dp" />

        <Button
            android:id="@+id/devices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Devices"
            android:layout_marginTop="10dp"
            style="@style/WhiteButton"
            android:height="50dp" />

        <Button
            android:id="@+id/technicians"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Tecnic"
            android:layout_marginTop="10dp"
            style="@style/WhiteButton"
            android:height="50dp" />

    </LinearLayout>
</ScrollView>
