<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/ticket_background"
    android:padding="12dp"
    android:layout_marginBottom="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/title"
            android:textSize="16sp"
            android:textStyle="bold" />



        <TextView
            android:id="@+id/tvUrgency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Urgency"
            android:textStyle="italic"
            android:layout_marginEnd="12dp" />

        <FrameLayout
            android:id="@+id/btnExpand"
            android:layout_width="32dp"
            android:layout_height="32dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/card"
                android:contentDescription="Botão" />

            <TextView
                android:id="@+id/expandText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/Plus"
                android:textColor="#115C94"
                android:textSize="18sp"
                android:textStyle="bold"
                android:gravity="center" />
        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/detailsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        android:layout_marginTop="12dp">

        <TextView
            android:id="@+id/tvState"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/state"
            android:textColor="#666"
            android:textStyle="italic"
            android:layout_marginEnd="12dp" />
        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Description" />

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Date" />

        <Button
            android:id="@+id/btnReparar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Repair1"
            android:layout_marginTop="12dp"
            android:backgroundTint="#115C94"
            android:textColor="#FFFFFF" />
    </LinearLayout>
</LinearLayout>