<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".admin.Create_Tec">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/return_icon"
            android:contentDescription="@string/Back" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/logo"
                android:contentDescription="@string/Logo" />


        </LinearLayout>
        <TextView
            android:layout_marginTop="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/AddDevice"
            android:textSize="20sp"
            android:textStyle="bold" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="24dp">


            <EditText
                android:id="@+id/editNome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Name"
                android:background="@drawable/rounded_border"
                android:padding="12dp"
                android:layout_marginBottom="12dp" />

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Email"
                android:background="@drawable/rounded_border"
                android:padding="12dp"
                android:layout_marginBottom="12dp" />

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Password"
                android:background="@drawable/rounded_border"
                android:padding="12dp"
                android:layout_marginBottom="12dp"
                android:inputType="textPassword"/>

            <EditText
                android:id="@+id/editTextPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/MobileNumber"
                android:background="@drawable/rounded_border"
                android:padding="12dp"
                android:gravity="top"
                android:layout_marginBottom="24dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="16dp">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginEnd="20dp"
                    android:text="@string/Cancel"
                    android:backgroundTint="#BDBDBD"
                    android:textColor="#FFFFFF" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Confirm"
                    android:layout_marginStart="20dp"
                    android:backgroundTint="#115C94"
                    android:textColor="#FFFFFF" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
